--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-  <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
-  <link type="text/css" rel="stylesheet" href="css/style.css">
-  <link type="text/css" rel="stylesheet" href="css/font-awesome.min.css">
-  <link type="text/css" rel="stylesheet" href="css/icones.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="../node_modules/jquery/dist/jquery.min.js" ></script>
+
 </head>
 <body>
   <app-root></app-root>
